Now using WebPack

--- a/client/website/templates/pagetypes/frontpage.html
+++ b/client/website/templates/pagetypes/frontpage.html
@@ -15,6 +15,6 @@
     </flexbox>
     
     <br><hr><br>
-    <button onclick="publify.startEdit();">Edit</button>
-    <button onclick="publify.endEdit();">Stop edit</button>
+    <button onclick="app.startEdit();">Edit</button>
+    <button onclick="app.endEdit();">Stop edit</button>
 </div>
